// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleButton snapshots checked = false, disabled = false, iconOnly = false, size = small, with Icon, with label, iconPos = left 1`] = `
<Pressable
  disabled={false}
  onPress={[MockFunction]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderColor": "#e2e2e4",
        "borderRadius": 1600,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
  testID="ToggleButton"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#e2e2e4",
          "borderRadius": 1600,
          "flexDirection": "row",
          "gap": 8,
          "minHeight": 28,
          "paddingHorizontal": 14,
          "paddingVertical": 8,
        },
        false,
      ]
    }
    testID="ToggleButton.container"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      fill="none"
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#2b2e33"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      testID="ToggleButton.icon"
      vbHeight={24}
      vbWidth={24}
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4281019955,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M7 7l10 10"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="ToggleButton.icon"
        />
        <RNSVGPath
          d="M17 8l0 9l-9 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="ToggleButton.icon"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        {
          "color": "#2b2e33",
          "flexShrink": 1,
          "fontFamily": "TT Fellows",
          "fontSize": 12,
          "fontWeight": 600,
          "includeFontPadding": false,
          "verticalAlign": "middle",
        }
      }
      testID="ToggleButton.text"
    >
      ButtonToggle
    </Text>
  </View>
</Pressable>
`;

exports[`ToggleButton snapshots checked = false, disabled = false, iconOnly = false, size = small, with Icon, with label, iconPos = right 1`] = `
<Pressable
  disabled={false}
  onPress={[MockFunction]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderColor": "#e2e2e4",
        "borderRadius": 1600,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
  testID="ToggleButton"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#e2e2e4",
          "borderRadius": 1600,
          "flexDirection": "row",
          "gap": 8,
          "minHeight": 28,
          "paddingHorizontal": 14,
          "paddingVertical": 8,
        },
        false,
      ]
    }
    testID="ToggleButton.container"
  >
    <Text
      style={
        {
          "color": "#2b2e33",
          "flexShrink": 1,
          "fontFamily": "TT Fellows",
          "fontSize": 12,
          "fontWeight": 600,
          "includeFontPadding": false,
          "verticalAlign": "middle",
        }
      }
      testID="ToggleButton.text"
    >
      ButtonToggle
    </Text>
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      fill="none"
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#2b2e33"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      testID="ToggleButton.icon"
      vbHeight={24}
      vbWidth={24}
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4281019955,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M7 7l10 10"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="ToggleButton.icon"
        />
        <RNSVGPath
          d="M17 8l0 9l-9 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="ToggleButton.icon"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</Pressable>
`;

exports[`ToggleButton snapshots checked = false, disabled = false, iconOnly = true, size = base, with Icon, with label 1`] = `
<Pressable
  disabled={false}
  onPress={[MockFunction]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderColor": "#e2e2e4",
        "borderRadius": 1600,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
  testID="ToggleButton"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#e2e2e4",
          "borderRadius": 1600,
          "flexDirection": "row",
          "gap": 8,
          "minHeight": 40,
          "paddingHorizontal": 14,
          "paddingVertical": 8,
        },
        {
          "aspectRatio": 1,
          "justifyContent": "center",
          "paddingHorizontal": 0,
          "paddingVertical": 0,
        },
      ]
    }
    testID="ToggleButton.container"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={20}
      bbWidth={20}
      fill="none"
      focusable={false}
      height={20}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#2b2e33"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      testID="ToggleButton.icon"
      vbHeight={24}
      vbWidth={24}
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4281019955,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M7 7l10 10"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="ToggleButton.icon"
        />
        <RNSVGPath
          d="M17 8l0 9l-9 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4281019955,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="ToggleButton.icon"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</Pressable>
`;

exports[`ToggleButton snapshots checked = false, disabled = false, iconOnly = true, size = base, with PNG Icon 1`] = `
<Pressable
  disabled={false}
  onPress={[MockFunction]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderColor": "rgba(255, 255, 255, 0.0001)",
        "borderRadius": 100,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
  testID="ToggleButton"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#e2e2e4",
          "borderRadius": 100,
          "flexDirection": "row",
          "gap": 7,
          "minHeight": 35,
          "paddingHorizontal": 14,
          "paddingVertical": 0,
        },
        {
          "aspectRatio": 1,
          "justifyContent": "center",
          "paddingHorizontal": 0,
          "paddingVertical": 0,
        },
      ]
    }
    testID="ToggleButton.container"
  >
    <Image
      resizeMode="contain"
      source={
        {
          "testUri": "../../../src/components/ToggleButton/hotels.png",
        }
      }
      style={
        {
          "color": "#181a1f",
          "height": 17.5,
          "width": 17.5,
        }
      }
      testID="ToggleButton.icon"
    />
  </View>
</Pressable>
`;

exports[`ToggleButton snapshots checked = false, disabled = true, iconOnly = false, size = large, with Icon, with label 1`] = `
<Pressable
  disabled={true}
  onPress={[MockFunction]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderColor": "#e2e2e4",
        "borderRadius": 1600,
        "borderWidth": 1,
        "opacity": 0.6,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
  testID="ToggleButton"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#e2e2e4",
          "borderRadius": 1600,
          "flexDirection": "row",
          "gap": 14,
          "minHeight": 56,
          "paddingHorizontal": 20,
          "paddingVertical": 8,
        },
        false,
      ]
    }
    testID="ToggleButton.container"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      fill="none"
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#85888e"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      testID="ToggleButton.icon"
      vbHeight={24}
      vbWidth={24}
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4286941326,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M7 7l10 10"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4286941326,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="ToggleButton.icon"
        />
        <RNSVGPath
          d="M17 8l0 9l-9 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4286941326,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="ToggleButton.icon"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <Text
      style={
        {
          "color": "#85888e",
          "flexShrink": 1,
          "fontFamily": "TT Fellows",
          "fontSize": 20,
          "fontWeight": 600,
          "includeFontPadding": false,
          "verticalAlign": "middle",
        }
      }
      testID="ToggleButton.text"
    >
      ButtonToggle
    </Text>
  </View>
</Pressable>
`;

exports[`ToggleButton snapshots checked = true, disabled = false, iconOnly = false, size = xlarge, with style, with Icon 1`] = `
<Pressable
  disabled={false}
  onPress={[MockFunction]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderColor": "#2b2e33",
        "borderRadius": 1600,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      {
        "margin": 10,
      },
    ]
  }
  testID="ToggleButton"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#2b2e33",
          "borderRadius": 1600,
          "flexDirection": "row",
          "gap": 14,
          "minHeight": 64,
          "paddingHorizontal": 20,
          "paddingVertical": 8,
        },
        {
          "aspectRatio": 1,
          "justifyContent": "center",
          "paddingHorizontal": 0,
          "paddingVertical": 0,
        },
      ]
    }
    testID="ToggleButton.container"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={36}
      bbWidth={36}
      fill="none"
      focusable={false}
      height={36}
      meetOrSlice={0}
      minX={0}
      minY={0}
      stroke="#ffffff"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 36,
            "width": 36,
          },
        ]
      }
      testID="ToggleButton.icon"
      vbHeight={24}
      vbWidth={24}
      width={36}
      xmlns="http://www.w3.org/2000/svg"
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      >
        <RNSVGPath
          d="M7 7l10 10"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="ToggleButton.icon"
        />
        <RNSVGPath
          d="M17 8l0 9l-9 0"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
          testID="ToggleButton.icon"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</Pressable>
`;

exports[`ToggleButton snapshots default 1`] = `
<Pressable
  disabled={false}
  onPress={[MockFunction]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderColor": "#e2e2e4",
        "borderRadius": 1600,
        "borderWidth": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
  testID="ToggleButton"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#e2e2e4",
          "borderRadius": 1600,
          "flexDirection": "row",
          "gap": 8,
          "minHeight": 40,
          "paddingHorizontal": 14,
          "paddingVertical": 8,
        },
        {
          "aspectRatio": 1,
          "justifyContent": "center",
          "paddingHorizontal": 0,
          "paddingVertical": 0,
        },
      ]
    }
    testID="ToggleButton.container"
  />
</Pressable>
`;
